[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-rag"
version = "0.1.0"
description = "RAG Document Q&A API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "psycopg2-binary",
    "pgvector",
    "sqlalchemy",
    "pydantic",
    "langchain",
    "langchain-community",
    "langchain-openai",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "httpx",
    "pytest",
]

[tool.setuptools]
packages = ["routes"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
